feat: 사용자 권한 도메인 추가 및 Security Context 권한 매핑